--- a/clase20/test/index.html
+++ b/clase20/test/index.html
@@ -10,30 +10,36 @@
 </head>
 <body>
 
-    <div class="jumbotron">
-        <h4>Conversor Dollar / Peso chileno</h4>
-        <form id="inputClp">
-                <label for="inputpeso">CLP$</label>
-                <input type ="number" class="form-control" id="inputpeso" placeholder="Valor en Pesos" value="">
-                <button type="submit" class="btn btn-default">convertir</button>
-              <div id="resultado1"> resultado</div>
-          </form>
 
-          <form id="inputUs">
-                <label for="inputdolar"> US $ </label>
-                <input type="number" class="form-control" id="inputdolar" placeholder="Valor en Dollar">
-                <button type="submit" class="btn btn-default">convertir</button>
-            <div id="resultado2"> resultado</div>
-          </form>
-</div>
 
 <div class="container">
   <div class="row">
-    <div class="col-md-4">
+    <div class="jumbotron col-md-4">
+        <h4>Conversor Dollar / Peso chileno</h4>
+        <!-- <form id="myform" action="index.html" method="post">
+          <textarea id="mytext"></textarea>
+          <input type="submit" name="" value="Crear nota">
+        </form> -->
+
+        <form id="inputClp">
+                <label for="inputpeso">CLP$</label>
+                <input type ="number" class="form-control" id="inputpeso" placeholder="Valor en Pesos" >
+                <input type="submit" name="" value="convertir">
+              <div id="resultado1"> </div>
+          </form>
+          <hr>
+          <form id="inputUs">
+                <label for="inputdolar"> US $ </label>
+                <input type="number" class="form-control" id="inputdolar" placeholder="Valor en Dollar">
+                <input type="submit" name="" value="convertir">
+            <div id="resultado2"> </div>
+          </form>
+</div>
+    <div class="col-md-8">
       <h4>Indicadores económicos</h4>
       <table class="table table-condensed">
         <tr>
-          <td>Dólar</td>
+          <td>Dólar Observado</td>
           <td id=dollar></td>
         </tr>
         <tr>
@@ -41,15 +47,16 @@
           <td id=euro></td>
         </tr>
         <tr>
-          <td>UF</td>
+          <td>Unidad de Fomento</td>
           <td id=uf></td>
         </tr>
         <tr>
-          <td>UTM</td>
+          <td>Unidad Triburaria Mensual</td>
           <td id=utm></td>
         </tr>
       </table>
-    </div><!-- md-8 -->
+    </div><!-- md-4 -->
+
   </div> <!-- row-->
 </div> <!-- container -->
 
@@ -57,6 +64,6 @@
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
